refactor: restore EXAMPLES.md as manually curated, remove its auto-generator
EXAMPLES.md requires rich, manually-authored workflow examples that show
composability patterns, shell variable usage, and multi-step sequences.
The auto-generated version (147 lines of pointers) lost the valuable
content that the original 1371-line version provided.

The auto-generation approach works for COMMANDS.md (a flat command index
derivable from commands.json) but NOT for EXAMPLES.md (which requires
human judgment about what patterns are most useful to demonstrate).

Changes:
- Restore EXAMPLES.md to its full manually-curated content
- Remove generate_examples_md test and generate_examples_md_content fn
- Remove examples_md_is_up_to_date drift detection test
- Update AGENTS.md to clarify EXAMPLES.md is manually maintained

Auto-generated files are now: commands.json + COMMANDS.md only.
EXAMPLES.md remains manually curated (as documented in AGENTS.md).

Assisted-by: OpenCode:claude-opus-4.6